# EtchDroid

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_test.yml  github-pages.yml  lint.yml  validate_pr.yml
app/: build.gradle  build.gradle.kts  lint.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: slide_in_right.xml  slide_out_left.xml
app/src/main/res/drawable/: ic_beta.xml  ic_disk_image_large.xml  ic_dmg.xml  ic_fdroid_logo_24dp.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_magnifying_glass.xml  ic_menu.xml  ic_navigate_next_black_24dp.xml  ic_raw.xml  ic_twotone_save_alt_24px.xml  ic_usb.xml  ic_usb_200dp.xml  ic_usb_black_200dp.xml  ic_usb_stick.xml  ic_usb_stick_large.xml  ic_usb_stick_search.xml  ic_usb_white_24dp.xml  ic_windows.xml  ic_write_to_usb.xml  ic_write_to_usb_anim.xml  ic_write_to_usb_f1.xml  ic_write_to_usb_f2.xml  ic_write_to_usb_f3.xml  ic_write_to_usb_f4.xml  ic_write_to_usb_f5.xml  ic_write_to_usb_f6.xml  ic_write_to_usb_failed.xml  ic_write_to_usb_failed_large.xml  ic_written_to_usb.xml  unplug_reconnect_accept.xml
app/src/main/res/drawable-night/: ic_dmg.xml  ic_raw.xml  ic_usb_200dp.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_confirmation.xml  activity_error.xml  activity_licenses.xml  activity_main.xml  activity_start.xml  activity_usb_drive_picker.xml  do_not_show_again.xml  fragment_confirminfo.xml  fragment_main.xml  fragment_select_flash_method.xml  fragment_select_location.xml  fragment_select_usb_drive.xml  license_row.xml  part_data_keyvalue.xml  partition_row.xml  usb_device_row.xml  (+1 more)
ci-scripts/: .gitignore  clone_base_ref.sh  setup_sdk.sh  validate_pr_changes.py  vars.sh
cmake_utils/: get_args.cmake  ndk_exec.cmake
dmg2img/: CMakeLists.txt  build.gradle
dmg2img/src/main/: AndroidManifest.xml
docs/: .gitattributes  .gitignore  CNAME  Gemfile  LICENSE  _config.yml  broken_usb.md  donate.md  download.md  faq.md  index.md  opensearch.xml  privacy.md
docs/_includes/: adsense.html  footer.html  head.html  header.html  image.html  sidebar.html  update.html  youtube.html
docs/_layouts/: default.html  page.html  post.html
docs/assets/css/: main.css
docs/assets/favicons/: browserconfig.xml  manifest.json
docs/assets/js/: main.js
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
metadata/ar/: full_description.txt  short_description.txt  title.txt
metadata/ar/changelogs/: 11.txt  12.txt  23.txt  5.txt  6.txt  7.txt
metadata/az-AZ/: full_description.txt  short_description.txt  title.txt
metadata/az-AZ/changelogs/: 11.txt  12.txt  21.txt  5.txt  6.txt  7.txt
metadata/cs/: full_description.txt  short_description.txt  title.txt
metadata/cs/changelogs/: 11.txt  12.txt  5.txt  6.txt  7.txt
metadata/de/: full_description.txt  short_description.txt  title.txt
metadata/de/changelogs/: 11.txt  12.txt  21.txt  5.txt  6.txt  7.txt
metadata/en-US/: full_description.txt  short_description.txt  title.txt
metadata/en-US/changelogs/: 11.txt  12.txt  23.txt  5.txt  6.txt  7.txt
metadata/es-ES/: full_description.txt  short_description.txt  title.txt
metadata/es-ES/changelogs/: 11.txt  12.txt  22.txt  5.txt  6.txt  7.txt
metadata/fr/: full_description.txt  short_description.txt  title.txt
metadata/fr/changelogs/: 11.txt  12.txt  5.txt  6.txt  7.txt
metadata/he/: full_description.txt  short_description.txt  title.txt
metadata/he/changelogs/: 11.txt  12.txt  5.txt  6.txt  7.txt
metadata/hu-HU/: full_description.txt  short_description.txt  title.txt
metadata/hu-HU/changelogs/: 11.txt  12.txt  23.txt  5.txt  6.txt  7.txt
metadata/id/: full_description.txt  short_description.txt  title.txt
metadata/id/changelogs/: 11.txt  12.txt  21.txt  5.txt  6.txt  7.txt
metadata/it-IT/: full_description.txt  short_description.txt  title.txt
metadata/it-IT/changelogs/: 11.txt  12.txt  23.txt  5.txt  6.txt  7.txt
metadata/ja-JP/: full_description.txt  short_description.txt  title.txt
metadata/ja-JP/changelogs/: 11.txt  12.txt  21.txt  5.txt  6.txt  7.txt
metadata/ko-KR/: full_description.txt  short_description.txt  title.txt
metadata/ko-KR/changelogs/: 11.txt  12.txt  21.txt  5.txt  6.txt  7.txt
metadata/nb_NO/: full_description.txt  short_description.txt  title.txt
metadata/nb_NO/changelogs/: 11.txt  12.txt  5.txt  6.txt  7.txt
metadata/nl/: full_description.txt  short_description.txt  title.txt
metadata/nl/changelogs/: 11.txt  12.txt  21.txt  5.txt  6.txt  7.txt
metadata/pt/: full_description.txt  short_description.txt  title.txt
metadata/pt/changelogs/: 11.txt  12.txt  23.txt  5.txt  6.txt  7.txt
metadata/pt_BR/: full_description.txt  short_description.txt  title.txt
metadata/pt_BR/changelogs/: 11.txt  12.txt  5.txt  6.txt  7.txt
metadata/ru-RU/: full_description.txt  short_description.txt  title.txt
metadata/ru-RU/changelogs/: 11.txt  12.txt  5.txt  6.txt  7.txt
metadata/sv/: short_description.txt  title.txt
metadata/sv/changelogs/: 5.txt  6.txt  7.txt
metadata/tr/: full_description.txt  short_description.txt  title.txt
metadata/tr/changelogs/: 11.txt  12.txt  21.txt  23.txt  5.txt  6.txt  7.txt
metadata/vi/: full_description.txt  short_description.txt  title.txt
metadata/vi/changelogs/: 11.txt
metadata/zh_Hans/: full_description.txt  short_description.txt  title.txt
metadata/zh_Hans/changelogs/: 11.txt  12.txt  23.txt  5.txt  6.txt  7.txt
misc/: istream-trace-log-analyzer.py  ostream-trace-log-analyzer.py
parted/: CMakeLists.txt  build.gradle
parted/src/main/: AndroidManifest.xml
termux-packages/: CMakeLists.txt  build.gradle
termux-packages/src/c/termux-wrapper/: CMakeLists.txt  build-packages.sh  install-packages.sh
termux-packages/src/main/: AndroidManifest.xml
termux-packages/src/main/java/eu/depau/termux_wrapper/: TermuxWrapper.kt
(+369 files in other folders)
